@@ -69,7 +69,7 @@
                     <!-- the flex values are like they are to make sure the liberator-message always gets
                          maximum size up to the screen size, but still do not enlarge the whole window for very, very long strings-->
                     <label class="plain" collapsed="false" id="liberator-message" flex="1" crop="end" liberator:highlight="Normal"/>
-                    <label class="plain" id="liberator-statusfields" flex="10000000" crop="center" style="text-align: right;" liberator:highlight="StatusLine"/>
+                    <label class="plain" id="liberator-status" flex="10000000" crop="center" style="text-align: right;" liberator:highlight="StatusLine"/>
                 </hbox>
                 <hbox id="liberator-commandline" hidden="false" collapsed="true" class="liberator-container" liberator:highlight="Normal">
                     <label class="plain" id="liberator-commandline-prompt"  flex="0" crop="end" value="" collapsed="true"/>
